# mqtt-docker-bench

./: .gitignore  .travis.yml  README.md  build.sh  docker-compose.yml
_presentation/: MQTT Bandwidth Estimation.pptx
_report/: assignment.aux  assignment.bbl  assignment.blg  assignment.tex  references.bib
_report/.svn/: all-wcprops  entries
_report/.svn/text-base/: assignment.pdf.svn-base  assignment.tex.svn-base  references.bib.svn-base
broker/: broker  user
clients/: Dockerfile  publish
clients/C/: CMakeLists.txt  Makefile  cmake_install.cmake
publish_c/: MQTT-C.cbp
publish_c/publisher/: simple_publisher.c
sensors/: Dockerfile  publish
sensors/old/: publish.sh  run.py
sinks/: Dockerfile  publish
